--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -16,10 +16,20 @@
       `layout: page` in the front-matter. See readme for usage.
     {% endcomment %}
 
-    {% assign pages_list = site.pages %}
-    {% for node in pages_list %}
+
+    {% for node in site.pages %}
       {% if node.title != null %}
         {% if node.layout == "page" %}
+          <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ node.url }}">{{ node.title }}</a>
+        {% endif %}
+      {% endif %}
+    {% endfor %}
+
+    <h2>Recent Posts</h2>
+
+    {% for node in site.posts limit 10 %}
+      {% if node.title != null %}
+        {% if node.layout == "post" %}
           <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ node.url }}">{{ node.title }}</a>
         {% endif %}
       {% endif %}
