--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -42,7 +42,7 @@
 
   <div class="sidebar-item">
     <p>
-      &copy; {{ site.time | date: '%Y' }}. All rights reserved.
+      &copy; 2013&ndash;{{ site.time | date: '%Y' }} Awesome Roots.<br>All rights reserved.
     </p>
   </div>
 </div>
