--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -42,7 +42,7 @@
 
   <div class="sidebar-item">
     <p>
-      &copy; 2013&ndash;{{ site.time | date: '%Y' }} Awesome Roots.<br>All rights reserved. Copying articles or parts is only allowed with reference to the original page.
+      &copy; 2013&ndash;{{ site.time | date: '%Y' }} <a href="http://awesomeroots.com/">Awesome Roots</a>.<br>All rights reserved. Copying articles or parts is only allowed with reference to the original page.
     </p>
   </div>
 </div>
