links to awesomeroots.com and blog home page in header

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,8 +13,8 @@
       <div class="masthead">
         <div class="container">
           <h3 class="masthead-title">
-            <a href="/" title="Home">{{ site.title }}</a>
-            <small>{{ site.tagline }}</small>
+            <a href="http://awesomeroots.com/" title="Home">{{ site.title }}</a>
+            <a href="/" title="Home"><small>{{ site.tagline }}</small></a>
           </h3>
         </div>
       </div>
